changed some mediaQ. fixed titles breaking on smaller screens. changed title font

--- a/style/sass/_global.scss
+++ b/style/sass/_global.scss
@@ -54,6 +54,7 @@ section:last-of-type {margin-bottom: 0; padding-bottom: 150px;}
   font-family: 'Courier New', Courier, monospace;
   margin-left: 20px;
   line-height: 0;
+  white-space: nowrap;
 }
 
 a, p {
