--- a/style/sass/_media-queries.scss
+++ b/style/sass/_media-queries.scss
@@ -43,6 +43,10 @@
     }
   }
 
+  .hero {
+    left: 15px;
+  }
+
   .about {
     flex-direction: column;
 
@@ -91,6 +95,12 @@
 
   section:not(.hero-section) {margin: 150px 0;}
   section:last-of-type {margin-bottom: 0; padding-bottom: 100px;}
+}
+/////////////////////////////////////////
+@media (max-width: 550px) {
+  .wrapper, .main::before {width: 95%;}
+  .tools__card {min-width: 80px;}
+  .tools .skills {height: 40px;}
 }
 /////////////////////////////////////////
 @media (max-width: 450px) {
