--- a/style/style.css
+++ b/style/style.css
@@ -357,6 +357,7 @@ section:last-of-type {
   font-family: 'Courier New', Courier, monospace;
   margin-left: 20px;
   line-height: 0;
+  white-space: nowrap;
 }
 
 a, p {
@@ -422,7 +423,7 @@ h1 {
 h2, h3 {
   font-size: 28px;
   font-size: 2.8rem;
-  font-family: 'Limelight', cursive;
+  font-family: 'Courier New', Courier, monospace;
   font-weight: 400;
   color: #55ccc0;
   position: relative;
@@ -1192,6 +1193,9 @@ footer .copyright a:hover {
   .nav__links li:first-of-type {
     border-top: 1px solid #5f5f5f;
   }
+  .hero {
+    left: 15px;
+  }
   .about {
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
@@ -1259,6 +1263,18 @@ footer .copyright a:hover {
   section:last-of-type {
     margin-bottom: 0;
     padding-bottom: 100px;
+  }
+}
+
+@media (max-width: 550px) {
+  .wrapper, .main::before {
+    width: 95%;
+  }
+  .tools__card {
+    min-width: 80px;
+  }
+  .tools .skills {
+    height: 40px;
   }
 }
 
